--- a/DanicngBeans/DanicngBeans/Base.lproj/Main.storyboard
+++ b/DanicngBeans/DanicngBeans/Base.lproj/Main.storyboard
@@ -299,47 +299,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="jTI-N8-Ka1">
-                                <rect key="frame" x="0.0" y="159" width="375" height="619"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="OhO-5R-m7c">
+                                <rect key="frame" x="0.0" y="234" width="375" height="578"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="UKP-ik-k1R" style="IBUITableViewCellStyleDefault" id="QNf-3q-Iw8">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="375" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="204" id="yiH-z0-A9X" customClass="CustomCell" customModule="DanicngBeans" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="375" height="204"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QNf-3q-Iw8" id="607-Zb-GfW">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.666667938232422"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yiH-z0-A9X" id="tjQ-WK-RBl">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="204"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UKP-ik-k1R">
-                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.666667938232422"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IA-1G-8OY">
+                                                    <rect key="frame" x="158" y="35" width="201" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sj2-mG-aCz">
+                                                    <rect key="frame" x="294" y="119.33333396911621" width="65" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eKc-mZ-yHZ">
+                                                    <rect key="frame" x="16" y="24" width="134" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZnG-tO-N8l">
+                                                    <rect key="frame" x="158" y="77" width="201" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="testLabel1" destination="5IA-1G-8OY" id="HbV-gr-JFU"/>
+                                            <outlet property="testLabel2" destination="ZnG-tO-N8l" id="oUd-iC-gQK"/>
+                                            <outlet property="testLabel3" destination="sj2-mG-aCz" id="Yau-RW-Xxo"/>
+                                            <outlet property="testLabel4" destination="eKc-mZ-yHZ" id="k20-zk-z2b"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="NIk-fF-Kvt" id="r61-go-mS4"/>
+                                    <outlet property="delegate" destination="NIk-fF-Kvt" id="nMu-dk-Bcd"/>
+                                </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label Test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6B-ok-Xzb">
+                                <rect key="frame" x="0.0" y="88" width="375" height="138"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="60"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oF8-rw-hxk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="jTI-N8-Ka1" firstAttribute="leading" secondItem="oF8-rw-hxk" secondAttribute="leading" id="4Ga-5n-ic5"/>
-                            <constraint firstItem="oF8-rw-hxk" firstAttribute="bottom" secondItem="jTI-N8-Ka1" secondAttribute="bottom" id="Vmi-Nw-zsb"/>
-                            <constraint firstItem="jTI-N8-Ka1" firstAttribute="top" secondItem="oF8-rw-hxk" secondAttribute="top" id="e8w-b8-ybL"/>
-                            <constraint firstItem="oF8-rw-hxk" firstAttribute="trailing" secondItem="jTI-N8-Ka1" secondAttribute="trailing" id="g0b-Az-u37"/>
+                            <constraint firstItem="OhO-5R-m7c" firstAttribute="top" secondItem="oF8-rw-hxk" secondAttribute="top" constant="146" id="83Q-7S-oH5"/>
+                            <constraint firstItem="OhO-5R-m7c" firstAttribute="bottom" secondItem="oF8-rw-hxk" secondAttribute="bottom" constant="34" id="DMe-9T-yBk"/>
+                            <constraint firstItem="oF8-rw-hxk" firstAttribute="trailing" secondItem="OhO-5R-m7c" secondAttribute="trailing" id="RpY-OQ-S1B"/>
+                            <constraint firstItem="OhO-5R-m7c" firstAttribute="leading" secondItem="oF8-rw-hxk" secondAttribute="leading" id="Rpc-cJ-fDP"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Gfo-cM-bnO"/>
                     <connections>
-                        <outlet property="tableView" destination="jTI-N8-Ka1" id="by6-M8-ggf"/>
+                        <outlet property="tableView" destination="OhO-5R-m7c" id="6St-aW-ojz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dCi-QI-i0T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1834.4000000000001" y="2565.5172413793102"/>
+            <point key="canvasLocation" x="892" y="2563.3004926108374"/>
         </scene>
         <!--Select Option Bottom Sheet View Controller-->
         <scene sceneID="sMN-Ot-HHK">
@@ -403,7 +438,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OlR-rK-XtU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2743.1999999999998" y="2564.039408866995"/>
+            <point key="canvasLocation" x="1802" y="2563"/>
         </scene>
         <!--Option Shot View Controller-->
         <scene sceneID="Zcl-Ja-ZaM">
@@ -460,7 +495,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xu7-7M-RQQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2743" y="3299"/>
+            <point key="canvasLocation" x="1801" y="3330"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="AuO-H5-eDj">
@@ -555,7 +590,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Americano" translatesAutoresizingMaskIntoConstraints="NO" id="grV-XI-IH6">
-                                <rect key="frame" x="50" y="124" width="309" height="513"/>
+                                <rect key="frame" x="35" y="216" width="309" height="513"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
